# z-seeker

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  fix.sh  test_auth.sh  test_db.rs  test_db_read.rs  test_embed.sh  test_parse.rs
.lancedb/semantic_chunks.lance/_transactions/: 0-91bd60ce-2fa5-46ae-895b-7743353a2bae.txn  1-6a7d7fbc-d0b9-442f-8da7-c8fd2f6e0700.txn  10-20798282-2764-4e6e-9490-23d2a088a67d.txn  11-f5c64d35-4cb6-4c86-90b3-9687afa3ef3a.txn  12-f03dd15f-f34e-4a59-b2d1-c52ef035ffbd.txn  13-20dbda05-f863-44d4-b7f1-16fd30596646.txn  14-fded7f08-5bcf-4ef1-9f06-be451797445f.txn  15-af1ac1c5-2d8b-4279-a63a-be940dc0b388.txn  16-76d2fd0a-2889-40ad-9daa-d5c071410b49.txn  17-0a898df1-40c9-4012-9e93-a9569b8c1bb7.txn  18-8bda629f-804a-48d8-879c-962d3d6014d5.txn  19-68402253-41e9-4354-abf8-7a1a93e29c0e.txn  2-790a1e25-dd0d-4c1d-b3b7-05c2b65b9acc.txn  20-1613ca3a-3a60-4320-b4b3-d3a071c67845.txn  21-3f62d0cf-50a7-4b3a-a76f-2d66c74a3d0a.txn  22-0717047b-ca5b-4333-84bf-801e82cc8d31.txn  23-cb99f754-e018-43e9-8b0f-39d57c654d8a.txn  24-f76a3795-ea2c-4429-af4c-5af7f0546041.txn  25-46f3449b-2972-4ffc-ac4b-d6c5165a53d2.txn  26-fd9901e9-d0c8-4190-9be5-bbcbf3a595d1.txn  27-af0fce65-da56-4233-9bd9-11bc130ebc9c.txn  28-bec79e76-2287-4cf0-8600-1bccc9fdf755.txn  29-8cec9a53-9e76-42b2-8a16-64f0d9fddf8f.txn  3-a1b74239-303f-4636-aa99-d46f6031a3f0.txn  30-2343a8ed-5a2d-4c64-909c-1f69ba62e1fa.txn  31-161f7f4c-2582-4151-b9c1-0c555548d608.txn  (+47 more)
src/: auth.rs  db.rs  install.rs  main.rs  mcp.rs  parser.rs  test.rs  test_lancedb.rs  watcher.rs  workspace.rs
src/provider/: github.rs
(+73 files in other folders)
